# code-library-backend

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md  diesel.toml
.circleci/: config.yml
.githooks/: pre-commit
.github/workflows/: cd-dev-api.yml  cd-dev-book.yml  cd-dev-borrow.yml  cd-dev-identity.yml  cd-dev-notification.yml  ci.yml  security.yml
api/: Cargo.toml  Dockerfile  README.md  REST-API.md  REST-API.yml  diesel.toml  full.Dockerfile  openapi.yml  slim.Dockerfile
api/src/: config.rs  lib.rs  main.rs  middleware.rs  response.rs  router.rs  rpc.rs
api/src/db/: db_connection.rs  db_model.rs  mod.rs
api/src/db/helpers/: book_endpoint.rs  mod.rs
api/src/db/queries/: book_endpoint.rs
api/src/db/tests/: db.sql  db_tests.rs  mod.rs  test_db_connection.rs
api/src/endpoints/: book.rs  borrow.rs  identity.rs  mod.rs  notification.rs  root.rs
api/src/lib/: config.rs  lib.rs  middleware.rs  rejections.rs  response.rs  responses.rs  router.rs  rpc.rs
api/src/lib/endpoints/: book.rs  identity.rs  mod.rs
api/src/lib/filters/: authorization.rs  mod.rs  pagination.rs  pagination_filter.rs  rejection.rs
api/src/lib/router/: book.rs  identity.rs  mod.rs  root.rs
api/src/middleware/: authentication.rs  mod.rs  rejection.rs
api/src/query_models/: book.rs  mod.rs  publisher.rs
api/src/rpc/: client_connections.rs  mod.rs
api/tests/: api.rs  book_endpoint_tests.rs
book/: Cargo.toml  Dockerfile  README.md  diesel.toml  full.Dockerfile  slim.Dockerfile
book/migrations/: 20210208110427_initial_schema.down.sql  20210208110427_initial_schema.up.sql  20210208110500_persistent_data.down.sql  20210208110500_persistent_data.up.sql
book/migrations/0001_create_base_structure/: up.sql
book/migrations/0002_fill_base_data/: down.sql
book/migrations/2020-10-12-164409_create_books/: down.sql  up.sql
book/migrations/2020-11-11-132222_alter_lang/: down.sql  up.sql
book/migrations/2020-11-11-133612_fill_base_data/: up.sql
book/migrations/2020-11-11-161454_alter_series/: down.sql  up.sql
book/src/: config.rs  lib.rs  main.rs
book/src/db/: mod.rs  models.rs  queries.rs  schema.rs
book/src/lib/: component_tests.rs  config.rs  lib.rs  test_data.rs
book/src/lib/db/: mocked_queries.rs  mod.rs  models.rs  queries.rs  schema.rs
book/src/lib/rpc/: mod.rs  models.rs  server.rs  service.rs
book/src/rpc/: mod.rs  models.rs  server.rs  service.rs
book/tests/: end_to_end.rs  integration.rs  test_data.rs
borrow/: Cargo.toml  Dockerfile  README.md  full.Dockerfile  slim.Dockerfile
borrow/src/: config.rs  main.rs
borrow/src/lib/: config.rs
borrow/src/lib/rpc/: mod.rs  server.rs
borrow/src/rpc/: server.rs  service.rs
helpers/: Cargo.toml  README.md
helpers/src/: db.rs  lib.rs  log.rs  result.rs  rpc.rs  types.rs  ulid.rs
helpers/src/db/: mod.rs  pagination.rs
helpers/src/filters/: book.rs  mod.rs  page.rs
identity/: Cargo.toml  Dockerfile  README.md  full.Dockerfile  slim.Dockerfile
identity/migrations/2020-10-21-185700_service_initial_setup/: down.sql  up.sql
identity/migrations/2020-11-02-210000_add_unique_roles/: down.sql  up.sql
identity/migrations/2020-12-09-140000_drop_users_roles/: down.sql  up.sql
identity/migrations/2020-12-09-160000_drop_role_attributes/: down.sql  up.sql
identity/migrations/2020-12-14-110000_migrate_uuid/: down.sql  up.sql
identity/src/: config.rs  lib.rs  main.rs
identity/src/authentication/: oauth.rs
identity/src/db/: mod.rs  models.rs  schema.rs
identity/src/identity/: lib.rs
identity/src/identity/db/: mod.rs
identity/src/lib/: config.rs  lib.rs
identity/src/lib/authentication/: mod.rs  oauth.rs
identity/src/lib/db/: mod.rs  models.rs  queries.rs  schema.rs
identity/src/lib/rpc/: mod.rs  models.rs  server.rs  service.rs
identity/src/lib/session/: jwt.rs
identity/src/rpc/: mod.rs  models.rs  server.rs  service.rs
identity/src/session/: jwt.rs
identity/tests/: db_queries.rs  rpc_endpoints.rs  sample_data.rs
notification/: Cargo.toml  Dockerfile  README.md  full.Dockerfile  slim.Dockerfile
notification/src/: config.rs  main.rs
notification/src/lib/: config.rs  lib.rs
notification/src/lib/db/: mod.rs
notification/src/lib/rpc/: mod.rs  server.rs  service.rs
notification/src/rpc/: server.rs  service.rs
src/api/: config.rs  main.rs  router.rs
src/api/db/: db_connection.rs  mod.rs  schema.rs
src/api/db/queries/: mod.rs
src/api/db/tests/: book_endpoint_tests.rs  test_db.rs
src/api/endpoints/: book.rs  borrow.rs  identity.rs  mod.rs  root.rs
src/api/query_models/: publisher.rs
tests/: api.rs  test.rs
tools/: check_if_pr_changed_files.py
