[package]
name = "code-library-backend"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>", "Alexey Bityukov <alexey.bityukov@code.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "identity"
path = "src/identity/main.rs"

[[bin]]
name = "book"
path = "src/book/main.rs"

[[bin]]
name = "borrow"
path = "src/borrow/main.rs"

[[bin]]
name = "notification"
path = "src/notification/main.rs"

[[bin]]
name = "api"
path = "src/api/main.rs"

[dependencies]
futures = "0.1"
hyper = "0.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
