[package]
name = "code-library-backend"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>","Alexey Bityukov <alexey.bityukov@code.berlin>"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "identity"
path = "src/identity/main.rs"

[[bin]]
name = "book"
path = "src/book/main.rs"

[[bin]]
name = "borrow"
path = "src/borrow/main.rs"

[[bin]]
name = "notification"
path = "src/notification/main.rs"

[[bin]]
name = "api"
path = "src/api/main.rs"

[dependencies]
tokio = { version = "0.2.13", features = ["macros"] }
warp = "0.2.2"
futures = "0.3.4"
hyper = "0.13"
log = "0.4.8"
env_logger = "0.7.1"
envconfig = "0.8"
envconfig_derive = "0.8"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.48"
serde_urlencoded = "0.6"
hyper-tls = "0.4"
bytes = "0.5"
jsonwebtoken = "7"
chrono = { version = "0.4.11", features = ["serde"] }
