[package]
name = "api"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[lib]
path = "src/lib/lib.rs"
name = "api"

[dependencies]
book = { path = "../book" }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.8"
envconfig = "0.9"
futures = "0.3"
helpers = { path = "../helpers" }
http = "0.2"
hyper = "0.13"
identity = { path = "../identity" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tarpc = { version = "0.26", features = ["full"] }
tokio = { version = "1.5", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
warp = "0.3"
