[package]
name = "api"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[lib]
path = "src/lib/lib.rs"
name = "api"

[dependencies]
book = { path = "../book" }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
futures = "0.3.15"
helpers = { path = "../helpers" }
http = "0.2.4"
identity = { path = "../identity" }
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_qs = { version = "0.8.3", features = ["warp"] }
tarpc = { version = "0.26.2", features = ["full"] }
tokio = { version = "1.6.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
uuid = "0.8.2"
warp = "0.3.1"
