[package]
name = "book"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[lib]
name = "book"
path = "src/lib/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.8"
envconfig = "0.9"
futures = "0.3"
helpers = { path = "../helpers" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tarpc = { version = "0.24", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }

[features]
test-data = []
