[package]
name = "book"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[lib]
name = "book"
path = "src/lib/lib.rs"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.8.4"
futures = "0.3.15"
helpers = { path = "../helpers" }
log = "0.4.14"
sea-query = { version = "0.12.3", features = ["sqlx-postgres", "with-uuid"] }
serde = { version = "1.0.126", features = ["derive"] }
sqlx = { version = "0.5.5", features = ["chrono", "default", "postgres", "runtime-tokio-native-tls", "uuid"] }
tarpc = { version = "0.26.2", features = ["full"] }
tokio = { version = "1.8.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
uuid = { version = "0.8.2", features = ["serde"] }


[dev-dependencies]
uuid = { version = "0.8.2", features = ["v4"] }
