[package]
name = "helpers"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls"] }
uuid = { version = "0.8", features = ["serde"] }
