[package]
name = "helpers"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.7", features = ["runtime-tokio-native-tls"] }
uuid = { version = "0.8.2", features = ["serde"] }
