[package]
name = "identity"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[lib]
name = "identity"
path = "src/lib/lib.rs"

[[bin]]
name = "identity"
test = false
doc = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = [ "chrono", "postgres", "r2d2"] }
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.8"
envconfig = "0.9"
futures = "0.3"
helpers = { path = "../helpers" }
hyper = "0.13"
hyper-tls = "0.4"
jsonwebtoken = "7.2"
log = "0.4"
once_cell = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stdext = "0.2.1"
tarpc = { version = "0.22", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
tokio-serde = { version = "0.6", features = ["json"] }
