[package]
name = "identity"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[lib]
name = "identity"
path = "src/lib/lib.rs"

[[bin]]
name = "identity"
test = false
doc = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
diesel_migrations = "1.4"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
helpers = { path = "../helpers" }
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
jsonwebtoken = "7.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stdext = "0.2.1"
tarpc = { version = "0.26", features = ["full"] }
tokio = { version = "1.6", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
