[package]
name = "identity"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[lib]
name = "identity"
path = "src/lib/lib.rs"

[[bin]]
name = "identity"
test = false
doc = false

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.17"
helpers = { path = "../helpers" }
hyper = { version = "0.14.13", features = ["client", "http1"] }
hyper-tls = "0.5.0"
jsonwebtoken = "7.2.0"
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.71"
stdext = "0.3.1"
tarpc = { version = "0.27.2", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
