[package]
name = "notification"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[lib]
name = "notification"
path = "src/lib/lib.rs"

[[bin]]
name = "notification"
test = false
doc = false

[dependencies]
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.8.3"
futures = "0.3.15"
helpers = { path = "../helpers" }
log = "0.4.14"
serde = { version = "1.0.126", features = ["derive"] }
tarpc = { version = "0.26.2", features = ["full"] }
tokio = { version = "1.6.1", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
