[package]
name = "notification"
version = "0.1.0"
authors = ["Markus Merklinger <markus.merklinger@code.berlin>"]
edition = "2018"

[lib]
name = "notification"
path = "src/lib/lib.rs"

[[bin]]
name = "notification"
test = false
doc = false

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.17"
helpers = { path = "../helpers" }
log = "0.4.14"
serde = { version = "1.0.130", features = ["derive"] }
tarpc = { version = "0.27.1", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
